--- a/src/app/page/login/login.component.html
+++ b/src/app/page/login/login.component.html
@@ -1,24 +1,47 @@
-<body>
-<div class="title">
-  <h1>Municipality Of San Juan, Batangas</h1>
-</div>
-<div class="image-container">
-<form (ngSubmit)="login()">
-    <div>
-      <label for="username">Username:</label>
-      <input type="text" id="username" name="username"  required>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>This Was My Login</title>
+  </head>
+  <body>
+    <div class="title">
+      <h1>Municipality Of San Juan, Batangas</h1>
     </div>
-  
-    <div>
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="password"  required>
-    </div>
-    
-    <div class="Login">
-    <a routerLink="/home/monthlyrecords" style="margin: auto;"><button type="submit">Login</button></a>
-    <a routerLink="/home" style="margin: auto;"><button type="button">Back</button></a>
-    </div>
+    <div class="image-container">
+      <form (submit)="login()">
+        <div>
+          <label for="username">Username:</label>
+          <input
+            type="text"
+            id="username"
+            name="username"
+            [(ngModel)]="model.username"
+            required
+          />
+        </div>
 
-  </form>
-</div>
-</body>
+        <div>
+          <label for="password">Password:</label>
+          <input
+            type="password"
+            id="password"
+            name="password"
+            [(ngModel)]="model.password"
+            required
+          />
+        </div>
+
+        <div class="Login">
+          <div style="text-align: center">
+            <button type="submit">Login</button>
+          </div>
+          <div>
+            <a routerLink="/page/home">
+              <button type="button">Back</button>
+            </a>
+          </div>
+        </div>
+      </form>
+    </div>
+  </body>
+</html>
