--- a/src/app/home/bmicalculator/bmicalculator.component.css
+++ b/src/app/home/bmicalculator/bmicalculator.component.css
@@ -1,21 +1,3 @@
-body {
-  margin: 0;
-  padding: 0;
-}
-
-.background-image {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  background-image: url("/assets/SanJuan.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  opacity: 0.8;
-}
-
 #BMI {
   border: 1px solid #ccc;
   border-radius: 10px;
@@ -50,7 +32,7 @@ select {
 #btn-calc {
   width: 100%;
   padding: 10px;
-  background-color: #4CAF50;
+  background-color: #4caf50;
   color: #fff;
   border: none;
   border-radius: 5px;
@@ -61,7 +43,7 @@ input:hover,
 input:focus,
 select:hover,
 select:focus {
-  border-color: #4CAF50;
+  border-color: #4caf50;
 }
 
 .result {
@@ -72,6 +54,10 @@ select:focus {
 #result-message {
   font-weight: bold;
   margin-top: 10px;
+}
+
+.severely {
+  color: red;
 }
 
 .underweight {
@@ -89,133 +75,50 @@ select:focus {
 .obese {
   color: #ff4500;
 }
-  
-  th, td {
-    padding: 8px;
-    text-align: left;
-    border-bottom: 1px solid #ddd;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
-  
-  th {
-    font-weight: bold;
-  }
-  
-  tr:hover {
-    background-color: #f5f5f5;
-  }
-  
-  .underweight-row {
-    background-color: red;
-    color: white;
-  }
-  
-  .healthyweight-row {
-    background-color: green;
-    color: white;
-  }
-  
-  .overweight-row {
-    background-color: yellow;
-    color: white;
-  }
-  
-  .obese-row {
-    background-color: orange;
-    color: white;
-  }
-  
-   * {
-    box-sizing: border-box;
-  }
-  
-  body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-  }
-  
-  .navbar {
-    background-color: #333;
-    color: #fff;
-    padding: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
-  .navbar-content {
-    display: flex;
-    align-items: center;
-  }
-  
-  .navbar-logo {
-    background-image: url("/assets/SanJuan1.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-    width: 80px;
-    height: 80px;
-    margin-right: 10px;
-  }
-  
-  .logo-text {
-    color: #fff;
-  }
-  
-  .navbar-list {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-  }
-  
-  .navbar-list li {
-    margin-left: 10px;
-  }
-  
-  .navbar-list li a {
-    color: #fff;
-    text-decoration: none;
-    padding: 5px 10px;
-  }
-  
-  .navbar-list li a:hover {
-    background-color: #555;
-  }
-  
-  .menu-button {
-    position: relative;
-  }
-  
-  .dropdown-menu {
-    display: none;
-    position: absolute;
-    top: 100%;
-    right: 0;
-    background-color: #fff;
-    padding: 10px;
-    list-style: none;
-    margin: 0;
-    z-index: 1;
-    width: 190px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-  }
-  
-  
-  .dropdown-menu li {
-    margin-bottom: 5px;
-  }
-  
-  .dropdown-menu li a {
-    text-decoration: none;
-    color: #333;
-    display: block;
-    padding: 5px 10px;
-  }
-  
-  .menu-button:hover .dropdown-menu {
-    display: block;
-  }
 
-  
+th,
+td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+th {
+  font-weight: bold;
+}
+
+tr:hover {
+  background-color: #f5f5f5;
+}
+
+.severelyunderweight-row {
+  background-color: red;
+  color: white;
+}
+
+.underweight-row {
+  background-color: rgb(239, 56, 56);
+  color: white;
+}
+
+.healthyweight-row {
+  background-color: green;
+  color: white;
+}
+
+.overweight-row {
+  background-color: yellow;
+  color: white;
+}
+
+.obese-row {
+  background-color: orange;
+  color: white;
+}
+
+* {
+  box-sizing: border-box;
+}
