--- a/src/app/home/children-info/children-info.component.html
+++ b/src/app/home/children-info/children-info.component.html
@@ -1,107 +1,173 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+/>
 
-<body>
-  <div class="background-image"></div>
 <div class="container">
-    <div class="navigation-buttons">
-        <button routerLink="/home/childreninfo">Children Info</button>
-        <button routerLink="/home/familyprofile">Family Profile</button>
+  <div class="navigation-buttons">
+    <button routerLink="/home/childreninfo">Children Info</button>
+    <button routerLink="/home/familyprofile">Family Profile</button>
+  </div>
+ 
+  <fieldset class="fieldset1">
+    <legend class="legend1">Children Profile</legend>
+    <form (ngSubmit)="onSubmit()">
+      <div>
+        <label for="firstName">First Name:</label>
+        <input
+          type="text"
+          id="firstName"
+          name="firstName"
+          [(ngModel)]="childData.firstName"
+          required
+        />
       </div>
-
-<fieldset class="fieldset1">
-  <legend class="legend1"> Children Profile </legend>
-<form #childrenForm="ngForm" (ngSubmit)="onSubmit()">
-    <div>
-      <label for="firstName">First Name:</label>
-      <input type="text" id="firstName" name="firstName" ngModel required>
-    </div>
-    <div>
-      <label for="middleName">Middle Name:</label>
-      <input type="text" id="middleName" name="middleName" ngModel>
-    </div>
-    <div>
-      <label for="lastName">Last Name:</label>
-      <input type="text" id="lastName" name="lastName" ngModel required>
-    </div>
-    <div>
-      <label for="birthday">Birthday:</label>
-      <input type="date" id="birthday" name="birthday" ngModel required>
-    </div>
-    <div>
-      <label for="age">Age:</label>
-      <input type="text" id="age" name="age" ngModel required>
-    </div>
-    <div>
-      <label for="address">Address:</label>
-      <input type="text" id="address" name="address" ngModel required>
-    </div>
-    <div>
-      <label for="barangay">Barangay:</label>
-      <select id="barangay" name="barangay" ngModel required>
-        <option value="ABUNG">ABUNG</option>
-            <option value="BALAGBAG">BALAGBAG</option>
-            <option value="BARUALTE">BARUALTE</option>
-            <option value="BATAAN">BATAAN</option>
-            <option value="BUHAY NA SAPA">BUHAY NA SAPA</option>
-            <option value="BULSA">BULSA</option>
-            <option value="CALICANTO">CALICANTO</option>
-            <option value="CALITCALIT">CALITCALIT</option>
-            <option value="CALUBCUB 1">CALUBCUB 1</option>
-            <option value="CALUBCUB 2">CALUBCUB 2</option>
-            <option value="CATMON">CATMON</option>
-            <option value="COLOCONTO">COLOCONTO</option>
-            <option value="ESCRIBANO">ESCRIBANO</option>
-            <option value="HUGOM">HUGOM</option>
-            <option value="IMELDA (TUBOG)">IMELDA (TUBOG)</option>
-            <option value="JANAOJANAO">JANAOJANAO</option>
-            <option value="LAIYA-IBABAO">LAIYA-IBABAO</option>
-            <option value="LAIYA-APLAYA">LAIYA-APLAYA</option>
-            <option value="LIBATO">LIBATO</option>
-            <option value="LIPAHAN">LIPAHAN</option>
-            <option value="MABALANOY">MABALANOY</option>
-            <option value="NAGSAULAY">NAGSAULAY</option>
-            <option value="MARAYKIT">MARAYKIT</option>
-            <option value="MUZON">MUZON</option>
-            <option value="PALAHANAN 1">PALAHANAN 1</option>
-            <option value="PALAHANAN 2">PALAHANAN 2</option>
-            <option value="PALINGOWAK">PALINGOWAK</option>
-            <option value="PINAGBAYANAN">PINAGBAYANAN</option>
-            <option value="POBLACION">POBLACION</option>
-            <option value="POCTOL">POCTOL</option>
-            <option value="PULANGBATO">PULANGBATO</option>
-            <option value="PUTINGBUHANGIN">PUTINGBUHANGIN</option>
-            <option value="QUIPOT">QUIPOT</option>
-            <option value="SAMPIRO">SAMPIRO</option>
-            <option value="SAPANGAN">SAPANGAN</option>
-            <option value="SICO 1">SICO 1</option>
-            <option value="SICO 2">SICO 2</option>
-            <option value="SUBUKIN">SUBUKIN</option>
-            <option value="TALAHIBAN 1">TALAHIBAN 1</option>
-            <option value="TALAHIBAN 2">TALAHIBAN 2</option>
-            <option value="TICALAN">TICALAN</option>
-            <option value="TIPAZ">TIPAZ</option>
-      </select>
-    </div>
-    <div>
-      <label for="fatherName">Father's Name:</label>
-      <input type="text" id="fatherName" name="fatherName" ngModel required>
-    </div>
-    <div>
-      <label for="motherName">Mother's Name:</label>
-      <input type="text" id="motherName" name="motherName" ngModel required>
-    </div>
-    <div>
-      <label>Gender:</label>
-      <input type="radio" id="male" name="gender" ngModel="male" value="male" required>
-      <label for="male">Male</label>
-      <input type="radio" id="female" name="gender" ngModel="female" value="female" required>
-      <label for="female">Female</label>
-    </div>
-    <div>
-      <button type="submit" [disabled]="childrenForm.invalid">Submit</button>
-    </div>
-  </form>
-</fieldset>
+      <div>
+        <label for="middleName">Middle Name:</label>
+        <input
+          type="text"
+          id="middleName"
+          name="middleName"
+          [(ngModel)]="childData.middleName"
+        />
+      </div>
+      <div>
+        <label for="lastName">Last Name:</label>
+        <input
+          type="text"
+          id="lastName"
+          name="lastName"
+          [(ngModel)]="childData.lastName"
+          required
+        />
+      </div>
+      <div>
+        <label for="birthday">Birthday:</label>
+        <input
+          type="date"
+          id="birthday"
+          name="birthday"
+          [(ngModel)]="childData.birthday"
+          required
+        />
+      </div>
+      <div>
+        <label for="age">Age:</label>
+        <input
+          type="text"
+          id="age"
+          name="age"
+          [(ngModel)]="childData.age"
+          required
+        />
+      </div>
+      <div>
+        <label for="address">Address:</label>
+        <input
+          type="text"
+          id="address"
+          name="address"
+          [(ngModel)]="childData.address"
+          required
+        />
+      </div>
+      <div>
+        <label for="barangay">Barangay:</label>
+        <select
+          id="barangay"
+          name="barangay"
+          [(ngModel)]="childData.barangay"
+          required
+        >
+          <option value="ABUNG">ABUNG</option>
+          <option value="BALAGBAG">BALAGBAG</option>
+          <option value="BARUALTE">BARUALTE</option>
+          <option value="BATAAN">BATAAN</option>
+          <option value="BUHAY NA SAPA">BUHAY NA SAPA</option>
+          <option value="BULSA">BULSA</option>
+          <option value="CALICANTO">CALICANTO</option>
+          <option value="CALITCALIT">CALITCALIT</option>
+          <option value="CALUBCUB 1">CALUBCUB 1</option>
+          <option value="CALUBCUB 2">CALUBCUB 2</option>
+          <option value="CATMON">CATMON</option>
+          <option value="COLOCONTO">COLOCONTO</option>
+          <option value="ESCRIBANO">ESCRIBANO</option>
+          <option value="HUGOM">HUGOM</option>
+          <option value="IMELDA (TUBOG)">IMELDA (TUBOG)</option>
+          <option value="JANAOJANAO">JANAOJANAO</option>
+          <option value="LAIYA-IBABAO">LAIYA-IBABAO</option>
+          <option value="LAIYA-APLAYA">LAIYA-APLAYA</option>
+          <option value="LIBATO">LIBATO</option>
+          <option value="LIPAHAN">LIPAHAN</option>
+          <option value="MABALANOY">MABALANOY</option>
+          <option value="NAGSAULAY">NAGSAULAY</option>
+          <option value="MARAYKIT">MARAYKIT</option>
+          <option value="MUZON">MUZON</option>
+          <option value="PALAHANAN 1">PALAHANAN 1</option>
+          <option value="PALAHANAN 2">PALAHANAN 2</option>
+          <option value="PALINGOWAK">PALINGOWAK</option>
+          <option value="PINAGBAYANAN">PINAGBAYANAN</option>
+          <option value="POBLACION">POBLACION</option>
+          <option value="POCTOL">POCTOL</option>
+          <option value="PULANGBATO">PULANGBATO</option>
+          <option value="PUTINGBUHANGIN">PUTINGBUHANGIN</option>
+          <option value="QUIPOT">QUIPOT</option>
+          <option value="SAMPIRO">SAMPIRO</option>
+          <option value="SAPANGAN">SAPANGAN</option>
+          <option value="SICO 1">SICO 1</option>
+          <option value="SICO 2">SICO 2</option>
+          <option value="SUBUKIN">SUBUKIN</option>
+          <option value="TALAHIBAN 1">TALAHIBAN 1</option>
+          <option value="TALAHIBAN 2">TALAHIBAN 2</option>
+          <option value="TICALAN">TICALAN</option>
+          <option value="TIPAZ">TIPAZ</option>
+        </select>
+      </div>
+      <div>
+        <label for="fatherName">Father's Name:</label>
+        <input
+          type="text"
+          id="fatherName"
+          name="fatherName"
+          [(ngModel)]="childData.fatherName"
+          required
+        />
+      </div>
+      <div>
+        <label for="motherName">Mother's Name:</label>
+        <input
+          type="text"
+          id="motherName"
+          name="motherName"
+          [(ngModel)]="childData.motherName"
+          required
+        />
+      </div>
+      <div>
+        <label>Gender:</label>
+        <input
+          type="radio"
+          id="male"
+          name="gender"
+          [(ngModel)]="childData.gender"
+          value="male"
+          required
+        />
+        <label for="male">Male</label>
+        <input
+          type="radio"
+          id="female"
+          name="gender"
+          [(ngModel)]="childData.gender"
+          value="female"
+          required
+        />
+        <label for="female">Female</label>
+      </div>
+      <div>
+        <button type="submit">Submit</button>
+      </div>
+    </form>
+  </fieldset>
 </div>
 <router-outlet></router-outlet>
-</body>
