--- a/src/app/home/family-profile/family-profile.component.css
+++ b/src/app/home/family-profile/family-profile.component.css
@@ -1,198 +1,110 @@
-.background-image {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    background-image: url("/assets/SanJuan.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    opacity: 0.8;
-  }
-  
-  * {
-    box-sizing: border-box;
-  }
-  
-  body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-  }
-  
-  .navbar {
-    background-color: #333;
-    color: #fff;
-    padding: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
-  .navbar-content {
-    display: flex;
-    align-items: center;
-  }
-  
-  .navbar-logo {
-    background-image: url("/assets/SanJuan1.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-    width: 80px;
-    height: 80px;
-    margin-right: 10px;
-  }
-  
-  .logo-text {
-    color: #fff;
-  }
-  
-  .navbar-list {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-  }
-  
-  .navbar-list li {
-    margin-left: 10px;
-  }
-  
-  .navbar-list li a {
-    color: #fff;
-    text-decoration: none;
-    padding: 5px 10px;
-  }
-  
-  .navbar-list li a:hover {
-    background-color: #555;
-  }
-  
-  .menu-button {
-    position: relative;
-  }
-  
-  .dropdown-menu {
-    display: none;
-    position: absolute;
-    top: 100%;
-    right: 0;
-    background-color: #fff;
-    padding: 10px;
-    list-style: none;
-    margin: 0;
-    z-index: 1;
-    width: 190px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-  }
-  
-  
-  .dropdown-menu li {
-    margin-bottom: 5px;
-  }
-  
-  .dropdown-menu li a {
-    text-decoration: none;
-    color: #333;
-    display: block;
-    padding: 5px 10px;
-  }
-  
-  .menu-button:hover .dropdown-menu {
-    display: block;
-  }
-  
-  .container {
-    max-width: 600px;
-    margin: 20px auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #f9f9f9;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .navigation-buttons {
-    display: flex;
-    justify-content: space-around;
-    margin-bottom: 20px;
-  }
-  
-  .navigation-buttons button {
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    padding: 10px 20px;
-    cursor: pointer;
-  }
-  
-  .navigation-buttons button:hover {
-    background-color: #0056b3;
-  }
-  
-  form {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #f9f9f9;
-  }
-  
-  form div {
-    margin-bottom: 10px;
-  }
-  
-  label {
-    display: block;
-    font-weight: bold;
-    margin-bottom: 5px;
-  }
-  
-  input[type="text"],
-  input[type="date"],
-  input[type="number"],
-  select {
-    width: 100%;
-    padding: 10px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  button[type="submit"] {
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
-  }
-  
-  button[type="submit"]:hover {
-    background-color: #0056b3;
-  }
+* {
+  box-sizing: border-box;
+}
 
-  fieldset{
-    border-radius: 4%;
-    border-color: #ccc;
-    margin-bottom: 3%;
-    margin-top: 3%;
-  }
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+}
 
-  legend{
-    text-align: center;
-    font-weight: bold;
-  }
+.container {
+  max-width: 600px;
+  margin: 20px auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
 
-  .fieldset1{
-    border-style: hidden;
-  }
+.navigation-buttons {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 20px;
+}
 
-  .legend1{
-    text-align: center;
-    font-size: 1.6vw;
-    font-weight: bold;
-  }
+.navigation-buttons button {
+  background-color: #4caf50;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+.navigation-buttons button:hover {
+  background-color: #138a17;
+}
+
+form {
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+}
+
+form div {
+  margin-bottom: 10px;
+}
+
+label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+input[type="text"],
+input[type="date"],
+input[type="number"],
+select {
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+input:hover,
+input:focus,
+select:hover,
+select:focus {
+  border-color: #4caf50;
+}
+
+button[type="submit"] {
+  background-color: #4caf50;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+button[type="submit"]:hover {
+  background-color: #138a17;
+}
+
+fieldset {
+  border-radius: 4%;
+  border-color: #ccc;
+  margin-bottom: 3%;
+  margin-top: 3%;
+}
+
+legend {
+  text-align: center;
+  font-weight: bold;
+}
+
+.fieldset1 {
+  border-style: hidden;
+}
+
+.legend1 {
+  text-align: center;
+  font-size: 1.6vw;
+  font-weight: bold;
+}
