--- a/src/app/home/family-profile/family-profile.component.html
+++ b/src/app/home/family-profile/family-profile.component.html
@@ -1,55 +1,94 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+/>
 
-<body>
-      <div class="background-image"></div>
-    <div class="container">
-        <div class="navigation-buttons">
-            <button routerLink="/home/childreninfo">Children Info</button>
-            <button routerLink="/home/familyprofile">Family Profile</button>
-          </div>
-    <fieldset class="fieldset1">
-      <legend class="legend1"> Family Profile </legend>
-    <form>
+<div class="container">
+  <div class="navigation-buttons">
+    <button routerLink="/home/childreninfo">Children Info</button>
+    <button routerLink="/home/familyprofile">Family Profile</button>
+  </div>
+  <fieldset class="fieldset1">
+    <legend class="legend1">Family Profile</legend>
+    <form (ngSubmit)="onSubmit()">
       <div>
-        <label for="householdnumber">Household Number:</label>
-        <input type="text" id="householdnumber" name="householdnumber" ngModel required>
-      </div>
-      <div>
-        <label for="householdmember">No. of Household Members:</label>
-        <input type="text" id="householdmember" name="householdmember" ngModel required>
+        <label for="houseHoldMember">No. of Household Members:</label>
+        <input
+          type="text"
+          id="houseHoldMember"
+          name="houseHoldMember"
+          [(ngModel)]="familyData.houseHoldMember"
+          required
+        />
       </div>
       <fieldset>
-      <div>
-        <legend>-NUMBER OF CHILDREN-</legend>
-      </div>
-      <div>
-        <label for="0-5monthsold">0-5 Months Old:</label>
-        <input type="text" id="0-5monthsold" name="0-5monthsold" ngModel>
-      </div>
-      <div>
-        <label for="6-23monthsold">6-23 Months Old:</label>
-        <input type="text" id="6-23monthsold" name="6-23monthsold" ngModel>
-      </div>
-      <div>
-        <label for="24-59monthsold">24-59 Months Old:</label>
-        <input type="text" id="24-59monthsold" name="24-59monthsold" ngModel>
-      </div>
-      <div>
-        <label for="below60monthsold">Below 60 Months Old:</label>
-        <input type="text" id="below60monthsold" name="below60monthsold" ngModel>
-      </div>
+        <div>
+          <legend>-NUMBER OF CHILDREN-</legend>
+        </div>
+        <div>
+          <label for="zeroToFiveMonthsOld">0-5 Months Old:</label>
+          <input
+            type="text"
+            id="zeroToFiveMonthsOld"
+            name="zeroToFiveMonthsOld"
+            [(ngModel)]="familyData.zeroToFiveMonthsOld"
+          />
+        </div>
+        <div>
+          <label for="sixToTwentyThreeMonthsOld">6-23 Months Old:</label>
+          <input
+            type="text"
+            id="sixToTwentyThreeMonthsOld"
+            name="sixToTwentyThreeMonthsOld"
+            [(ngModel)]="familyData.sixToTwentyThreeMonthsOld"
+          />
+        </div>
+        <div>
+          <label for="twentyFourToFiftyNineMonthsOld">24-59 Months Old:</label>
+          <input
+            type="text"
+            id="twentyFourToFiftyNineMonthsOld"
+            name="twentyFourToFiftyNineMonthsOld"
+            [(ngModel)]="familyData.twentyFourToFiftyNineMonthsOld"
+          />
+        </div>
+        <div>
+          <label for="belowSixtyMonthsOld">Below 60 Months Old:</label>
+          <input
+            type="text"
+            id="belowSixtyMonthsOld"
+            name="belowSixtyMonthsOld"
+            [(ngModel)]="familyData.belowSixtyMonthsOld"
+          />
+        </div>
       </fieldset>
       <div>
-        <label for="head/spouse">Name of Household Head/Spouse:</label>
-        <input type="text" id="head/spouse" name="head/spouse" ngModel required>
+        <label for="headOrSpouse">Name of Household Head/Spouse:</label>
+        <input
+          type="text"
+          id="headOrSpouse"
+          name="headOrSpouse"
+          [(ngModel)]="familyData.headOrSpouse"
+          required
+        />
       </div>
       <div>
         <label for="occupation">Occupation:</label>
-        <input type="text" id="occupation" name="occupation" ngModel>
+        <input
+          type="text"
+          id="occupation"
+          name="occupation"
+          [(ngModel)]="familyData.occupation"
+          required
+        />
       </div>
       <div>
-        <label for="educationalattainment">Educational Attainment:</label>
-        <select id="educationalattainment" name="educationalattainment" [(ngModel)]="educationalattainment">
+        <label for="educationalAttainment">Educational Attainment:</label>
+        <select
+          id="educationalAttainment"
+          name="educationalAttainment"
+          [(ngModel)]="familyData.educationalAttainment"
+        >
           <option value="EU">EU (Elementary Undergraduate)</option>
           <option value="EG">EG (Elementary Graduate)</option>
           <option value="HU">HU (Highschool Undergraduate)</option>
@@ -57,97 +96,139 @@
           <option value="CU">CU (College Undergraduate)</option>
           <option value="CG">CG (College Graduate)</option>
           <option value="V">V (Vocational)</option>
-          <option value="O">V (Other)</option>
-        </select>
-      </div>
-      <div *ngIf="educationalattainment === 'O'">
-        <label for="otherEducationalAttainment">Other Educational Attainment:</label>
-        <input type="text" id="otherEducationalAttainment" name="otherEducationalAttainment" [(ngModel)]="otherEducationalAttainment">
-      </div>
-      <fieldset>
-      <div>
-        <legend>Check If:</legend>
-      </div>
-      <div>
-        <label for="motherPregnant">Mother Pregnant:</label>
-        <input type="checkbox" id="motherPregnant" name="motherPregnant" [(ngModel)]="motherPregnant">
-      </div>
-      <div>
-        <label for="familyPlanning">Couple Practices Family Planning:</label>
-        <input type="checkbox" id="familyPlanning" name="familyPlanning" [(ngModel)]="familyPlanning">
-      </div>
-      </fieldset>
-      <fieldset>
-      <div>
-        <legend>-BREASTFEEDING ≤ 6 MONTHS OLD-</legend>
-      </div>
-      <div>
-        <legend>Check If:</legend>
-      </div>
-      <div>
-        <label for="EBF">Exclusive Breastfeeding (EBF):</label>
-        <input type="checkbox" id="EBF" name="EBF" [(ngModel)]="EBF">
-      </div>
-      <div>
-        <label for="mixedMilkFeeding">Mixed Milk Feeding:</label>
-        <input type="checkbox" id="mixedMilkFeeding" name="mixedMilkFeeding" [(ngModel)]="mixedMilkFeeding">
-      </div>
-      <div>
-        <label for="bottleFeeding">Bottle Feeding:</label>
-        <input type="checkbox" id="bottleFeeding" name="bottleFeeding" [(ngModel)]="bottleFeeding">
-      </div>
-      </fieldset>
-      <fieldset>
-      <div>
-        <legend>Fill In:</legend>
-      </div>
-      <div>
-        <label for="toiletType">Toilet Type:</label>
-        <select id="toiletType" name="toiletType" [(ngModel)]="toiletType">
-          <option value="WS">WS (Water-Sealed)</option>
-          <option value="OP">OP (Open Pit)</option>
           <option value="O">O (Other)</option>
-          <option value="N">N (None)</option>
         </select>
       </div>
-      <div *ngIf="toiletType === 'O'">
-        <label for="otherToiletType">Other Toilet Type:</label>
-        <input type="text" id="otherToiletType" name="otherToiletType" [(ngModel)]="otherToiletType">
-      </div>  
-      <div>
-        <label for="waterSource">Water Source:</label>
-        <select id="waterSource" name="waterSource" [(ngModel)]="waterSource">
-          <option value="P">P (Piped)</option>
-          <option value="W">W (Well)</option>
-          <option value="S">S (Spring)</option>
-        </select>
-      </div>
-      <div>
-        <label for="foodProductionActivity">Food Production Activity:</label>
-        <select id="foodProductionActivity" name="foodProductionActivity" [(ngModel)]="foodProductionActivity">
-          <option value="VG">VG (Vegetable Gardening)</option>
-          <option value="P/L">P/L (Poultry/Livestock)</option>
-          <option value="FP">FP (Fishpond)</option>
-        </select>
-      </div>
+      <fieldset>
+        <div>
+          <legend>Check If:</legend>
+        </div>
+        <div>
+          <label for="motherPregnant">Mother Pregnant:</label>
+          <input
+            type="checkbox"
+            id="motherPregnant"
+            name="motherPregnant"
+            [(ngModel)]="familyData.motherPregnant"
+          />
+        </div>
+        <div>
+          <label for="familyPlanning">Couple Practices Family Planning:</label>
+          <input
+            type="checkbox"
+            id="familyPlanning"
+            name="familyPlanning"
+            [(ngModel)]="familyData.familyPlanning"
+          />
+        </div>
       </fieldset>
       <fieldset>
-      <div>
-        <label>Check If:</label>
-      </div>
-      <div>
-        <label>Household Using Iodized Salt:</label>
-        <input type="checkbox" id="iodizedSalt" name="iodizedSalt" [(ngModel)]="iodizedSalt">
-      </div>
-      
-      <div>
-        <label>Household Using IFR (Iron-Fortified Rice):</label>
-        <input type="checkbox" id="ifr" name="ifr" [(ngModel)]="ifr">
-      </div>
+        <div>
+          <legend>-BREASTFEEDING ≤ 6 MONTHS OLD-</legend>
+        </div>
+        <div>
+          <legend>Check If:</legend>
+        </div>
+        <div>
+          <label for="exclusiveBreastfeeding"
+            >Exclusive Breastfeeding (EBF):</label
+          >
+          <input
+            type="checkbox"
+            id="exclusiveBreastfeeding"
+            name="exclusiveBreastfeeding"
+            [(ngModel)]="familyData.exclusiveBreastfeeding"
+          />
+        </div>
+        <div>
+          <label for="mixedMilkFeeding">Mixed Milk Feeding:</label>
+          <input
+            type="checkbox"
+            id="mixedMilkFeeding"
+            name="mixedMilkFeeding"
+            [(ngModel)]="familyData.mixedMilkFeeding"
+          />
+        </div>
+        <div>
+          <label for="bottleFeeding">Bottle Feeding:</label>
+          <input
+            type="checkbox"
+            id="bottleFeeding"
+            name="bottleFeeding"
+            [(ngModel)]="familyData.bottleFeeding"
+          />
+        </div>
       </fieldset>
-      <button type="submit">Submit</button>
+      <fieldset>
+        <div>
+          <legend>Fill In:</legend>
+        </div>
+        <div>
+          <label for="toiletType">Toilet Type:</label>
+          <select
+            id="toiletType"
+            name="toiletType"
+            [(ngModel)]="familyData.toiletType"
+          >
+            <option value="WS">WS (Water-Sealed)</option>
+            <option value="OP">OP (Open Pit)</option>
+            <option value="O">O (Other)</option>
+            <option value="N">N (None)</option>
+          </select>
+        </div>
+        <div>
+          <label for="waterSource">Water Source:</label>
+          <select
+            id="waterSource"
+            name="waterSource"
+            [(ngModel)]="familyData.waterSource"
+          >
+            <option value="P">P (Piped)</option>
+            <option value="W">W (Well)</option>
+            <option value="S">S (Spring)</option>
+          </select>
+        </div>
+        <div>
+          <label for="foodProductionActivity">Food Production Activity:</label>
+          <select
+            id="foodProductionActivity"
+            name="foodProductionActivity"
+            [(ngModel)]="familyData.foodProductionActivity"
+          >
+            <option value="VG">VG (Vegetable Gardening)</option>
+            <option value="P/L">P/L (Poultry/Livestock)</option>
+            <option value="FP">FP (Fishpond)</option>
+          </select>
+        </div>
+      </fieldset>
+      <fieldset>
+        <div>
+          <label>Check If:</label>
+        </div>
+        <div>
+          <label>Household Using Iodized Salt:</label>
+          <input
+            type="checkbox"
+            id="iodizedSalt"
+            name="iodizedSalt"
+            [(ngModel)]="familyData.iodizedSalt"
+          />
+        </div>
+
+        <div>
+          <label>Household Using IFR (Iron-Fortified Rice):</label>
+          <input
+            type="checkbox"
+            id="ifr"
+            name="ifr"
+            [(ngModel)]="familyData.ifr"
+          />
+        </div>
+      </fieldset>
+      <div>
+        <button type="submit">Submit</button>
+      </div>
     </form>
   </fieldset>
-    <router-outlet></router-outlet>
-
-
+</div>
+<router-outlet></router-outlet>
