--- a/src/app/home/monthly-record/monthly-record.component.html
+++ b/src/app/home/monthly-record/monthly-record.component.html
@@ -1,88 +1,141 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+/>
 
-<body>
-      <div class="background-image"></div>
-    <div class="container">
-        <div class="navigation-buttons">
-            <button routerLink="/home/monthlyrecords">Monthly Height Records</button>
-            <button routerLink="/home/monthlyweight">Monthly Weight Records</button>
-            <button routerLink="/home/monthlyrecordsinfant">Monthly Records (Infant)</button>
-          </div>
+<div class="container">
+  <div class="navigation-buttons">
+    <button routerLink="/home/monthlyrecords">Monthly Height Records</button>
+    <button routerLink="/home/monthlyweight">Monthly Weight Records</button>
+    <button routerLink="/home/monthlyrecordsinfant">
+      Monthly Records (Infant)
+    </button>
+  </div>
   <fieldset>
-      <legend> Monthly Records of Height and Height Status Wasted and Severely Wasted Cases </legend>
-    <form>
+    <legend>
+      Monthly Records of Height and Height Status Wasted and Severely Wasted
+      Cases
+    </legend>
+    <form (ngSubmit)="onSubmit()">
       <div>
-        <label for="NameOfChild">Name Of Child:</label>
-        <input type="text" id="NameOfChild" name="NameOfChild" ngModel required>
+        <label for="nameOfChild">Name Of Child:</label>
+        <select
+          id="nameOfChild"
+          name="nameOfChild"
+          [(ngModel)]="monthlyHeightRecordData.nameOfChild"
+          required
+        >
+          <option value="">Select a Child</option>
+          <option *ngFor="let child of childRecords" [ngValue]="child">
+            {{ child.firstName }} {{ child.lastName }}
+          </option>
+        </select>
       </div>
+
       <div>
         <label for="birthday">Birthday:</label>
-        <input type="date" id="birthday" name="birthday" ngModel required>
+        <input
+          type="date"
+          id="birthday"
+          name="birthday"
+          [value]="getSelectedChildBirthday()"
+          [(ngModel)]="monthlyHeightRecordData.birthday"
+          required
+        />
       </div>
       <div>
         <label for="ageInMonths">Age in Month:</label>
-        <input type="text" id="ageInMonths" name="ageInMonths" ngModel required>
+        <input
+          type="text"
+          id="ageInMonths"
+          name="ageInMonths"
+          [value]="getSelectedChildAge()"
+          [(ngModel)]="monthlyHeightRecordData.ageInMonths"
+          required
+        />
       </div>
       <div>
         <label for="weight">Weight:</label>
-        <input type="number" id="weight" name="weight" [(ngModel)]="weight">
+        <input
+          type="number"
+          id="weight"
+          name="weight"
+          [(ngModel)]="monthlyHeightRecordData.weight"
+        />
       </div>
       <div>
         <label for="heightOrLength">Height/Length:</label>
-        <input type="number" id="heightOrLength" name="heightOrLength" [(ngModel)]="heightOrLength">
+        <input
+          type="number"
+          id="heightOrLength"
+          name="heightOrLength"
+          [(ngModel)]="monthlyHeightRecordData.heightOrLength"
+        />
       </div>
       <div>
         <label for="nutritionalStatus">Nutritional Status:</label>
-        <input type="text" id="nutritionalStatus" name="nutritionalStatus" ngModel required>
+        <input
+          type="text"
+          id="nutritionalStatus"
+          name="nutritionalStatus"
+          [(ngModel)]="monthlyHeightRecordData.nutritionalStatus"
+          required
+        />
       </div>
       <div>
         <label for="barangay">Barangay:</label>
-        <select id="barangay" name="barangay" ngModel required>
+        <select
+          id="barangay"
+          name="barangay"
+          [(ngModel)]="monthlyHeightRecordData.barangay"
+          required
+        >
           <option value="ABUNG">ABUNG</option>
-            <option value="BALAGBAG">BALAGBAG</option>
-            <option value="BARUALTE">BARUALTE</option>
-            <option value="BATAAN">BATAAN</option>
-            <option value="BUHAY NA SAPA">BUHAY NA SAPA</option>
-            <option value="BULSA">BULSA</option>
-            <option value="CALICANTO">CALICANTO</option>
-            <option value="CALITCALIT">CALITCALIT</option>
-            <option value="CALUBCUB 1">CALUBCUB 1</option>
-            <option value="CALUBCUB 2">CALUBCUB 2</option>
-            <option value="CATMON">CATMON</option>
-            <option value="COLOCONTO">COLOCONTO</option>
-            <option value="ESCRIBANO">ESCRIBANO</option>
-            <option value="HUGOM">HUGOM</option>
-            <option value="IMELDA (TUBOG)">IMELDA (TUBOG)</option>
-            <option value="JANAOJANAO">JANAOJANAO</option>
-            <option value="LAIYA-IBABAO">LAIYA-IBABAO</option>
-            <option value="LAIYA-APLAYA">LAIYA-APLAYA</option>
-            <option value="LIBATO">LIBATO</option>
-            <option value="LIPAHAN">LIPAHAN</option>
-            <option value="MABALANOY">MABALANOY</option>
-            <option value="NAGSAULAY">NAGSAULAY</option>
-            <option value="MARAYKIT">MARAYKIT</option>
-            <option value="MUZON">MUZON</option>
-            <option value="PALAHANAN 1">PALAHANAN 1</option>
-            <option value="PALAHANAN 2">PALAHANAN 2</option>
-            <option value="PALINGOWAK">PALINGOWAK</option>
-            <option value="PINAGBAYANAN">PINAGBAYANAN</option>
-            <option value="POBLACION">POBLACION</option>
-            <option value="POCTOL">POCTOL</option>
-            <option value="PULANGBATO">PULANGBATO</option>
-            <option value="PUTINGBUHANGIN">PUTINGBUHANGIN</option>
-            <option value="QUIPOT">QUIPOT</option>
-            <option value="SAMPIRO">SAMPIRO</option>
-            <option value="SAPANGAN">SAPANGAN</option>
-            <option value="SICO 1">SICO 1</option>
-            <option value="SICO 2">SICO 2</option>
-            <option value="SUBUKIN">SUBUKIN</option>
-            <option value="TALAHIBAN 1">TALAHIBAN 1</option>
-            <option value="TALAHIBAN 2">TALAHIBAN 2</option>
-            <option value="TICALAN">TICALAN</option>
-            <option value="TIPAZ">TIPAZ</option>
+          <option value="BALAGBAG">BALAGBAG</option>
+          <option value="BARUALTE">BARUALTE</option>
+          <option value="BATAAN">BATAAN</option>
+          <option value="BUHAY NA SAPA">BUHAY NA SAPA</option>
+          <option value="BULSA">BULSA</option>
+          <option value="CALICANTO">CALICANTO</option>
+          <option value="CALITCALIT">CALITCALIT</option>
+          <option value="CALUBCUB 1">CALUBCUB 1</option>
+          <option value="CALUBCUB 2">CALUBCUB 2</option>
+          <option value="CATMON">CATMON</option>
+          <option value="COLOCONTO">COLOCONTO</option>
+          <option value="ESCRIBANO">ESCRIBANO</option>
+          <option value="HUGOM">HUGOM</option>
+          <option value="IMELDA (TUBOG)">IMELDA (TUBOG)</option>
+          <option value="JANAOJANAO">JANAOJANAO</option>
+          <option value="LAIYA-IBABAO">LAIYA-IBABAO</option>
+          <option value="LAIYA-APLAYA">LAIYA-APLAYA</option>
+          <option value="LIBATO">LIBATO</option>
+          <option value="LIPAHAN">LIPAHAN</option>
+          <option value="MABALANOY">MABALANOY</option>
+          <option value="NAGSAULAY">NAGSAULAY</option>
+          <option value="MARAYKIT">MARAYKIT</option>
+          <option value="MUZON">MUZON</option>
+          <option value="PALAHANAN 1">PALAHANAN 1</option>
+          <option value="PALAHANAN 2">PALAHANAN 2</option>
+          <option value="PALINGOWAK">PALINGOWAK</option>
+          <option value="PINAGBAYANAN">PINAGBAYANAN</option>
+          <option value="POBLACION">POBLACION</option>
+          <option value="POCTOL">POCTOL</option>
+          <option value="PULANGBATO">PULANGBATO</option>
+          <option value="PUTINGBUHANGIN">PUTINGBUHANGIN</option>
+          <option value="QUIPOT">QUIPOT</option>
+          <option value="SAMPIRO">SAMPIRO</option>
+          <option value="SAPANGAN">SAPANGAN</option>
+          <option value="SICO 1">SICO 1</option>
+          <option value="SICO 2">SICO 2</option>
+          <option value="SUBUKIN">SUBUKIN</option>
+          <option value="TALAHIBAN 1">TALAHIBAN 1</option>
+          <option value="TALAHIBAN 2">TALAHIBAN 2</option>
+          <option value="TICALAN">TICALAN</option>
+          <option value="TIPAZ">TIPAZ</option>
         </select>
       </div>
       <button type="submit">Submit</button>
     </form>
   </fieldset>
-    <router-outlet></router-outlet>
+  <router-outlet></router-outlet>
+</div>
