--- a/src/app/home/quarterly-table/quarterly-table.component.css
+++ b/src/app/home/quarterly-table/quarterly-table.component.css
@@ -16,7 +16,7 @@ legend {
   font-size: 1.6vw;
 }
 
-#monthlyRecordsInfant {
+#quarterlyRecords {
   border: 1px solid #ccc;
   padding: 20px;
   margin-top: 20px;
@@ -24,7 +24,7 @@ legend {
   background-color: #f9f9f9;
 }
 
-#monthlyRecordsInfant legend {
+#quarterlyRecords legend {
   font-size: 20px;
   font-weight: bold;
 }
