--- a/src/app/home/quarterly-table/quarterly-table.component.html
+++ b/src/app/home/quarterly-table/quarterly-table.component.html
@@ -6,36 +6,40 @@
 <fieldset>
   <div>
     <div class="result-container">
-      <fieldset id="monthlyHeightRecords">
-        <legend>Monthly Height Records</legend>
+      <fieldset id="quarterlyRecords">
+        <legend>Quarterly Health Records</legend>
         <div class="result-table">
           <table>
             <thead>
               <tr>
-                <th>#</th>
-                <th>Name of Child</th>
-                <th>Birthday (dd/mm/yyyy)</th>
-                <th>Age in Months</th>
+                <th>Quarterly Records ID</th>
+                <th>Name Of Child</th>
+                <th>Birthday</th>
+                <th>Age in Month</th>
                 <th>Weight</th>
-                <th>Height or Length</th>
-                <th>Nutritional Status</th>
+                <th>Height/Length</th>
+                <th>Weight for Length/Height</th>
+                <th>Nutritional Status (Nut1 Status)</th>
                 <th>Barangay</th>
+                <th>Measurement Month</th>
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let record of monthlyHeightRecords">
-                <td>{{ record.monthlyHeightRecordsId }}</td>
+              <tr *ngFor="let record of quarterlyTable">
+                <td>{{ record.childrenId }}</td>
                 <td>{{ record.nameOfChild }}</td>
                 <td>{{ record.birthday }}</td>
-                <td>{{ record.ageInMonths }}</td>
+                <td>{{ record.ageInMonth }}</td>
                 <td>{{ record.weight }}</td>
                 <td>{{ record.heightOrLength }}</td>
+                <td>{{ record.weightForLengthOrHeight }}</td>
                 <td>{{ record.nutritionalStatus }}</td>
                 <td>{{ record.barangay }}</td>
+                <td>{{ record.measurementMonth }}</td>
               </tr>
             </tbody>
           </table>
-          <p *ngIf="monthlyHeightRecords.length === 0">No records available</p>
+          <p *ngIf="quarterlyTable.length === 0">No health records available</p>
         </div>
       </fieldset>
     </div>
