--- a/src/app/landingpage/landingpage.component.css
+++ b/src/app/landingpage/landingpage.component.css
@@ -1,148 +1,142 @@
-
 .background-image {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    background-image: url("/assets/SanJuan.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    opacity: 0.8;
-  
-  }
-  
-  * {
-    box-sizing: border-box;
-  }
-  
-  body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-  }
-  
-  .navbar {
-    background-color: #333;
-    color: #fff;
-    padding: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
-  .navbar-content {
-    display: flex;
-    align-items: center;
-  }
-  
-  .navbar-logo {
-    background-image: url("/assets/SanJuan1.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-    width: 80px;
-    height: 80px;
-    margin-right: 10px;
-  }
-  
-  .logo-text {
-    color: #fff;
-  }
-  
-  .navbar-list {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-  }
-  
-  .navbar-list li {
-    margin-left: 10px;
-  }
-  
-  .navbar-list li a {
-    color: #fff;
-    text-decoration: none;
-    padding: 5px 10px;
-  }
-  
-  .navbar-list li a:hover {
-    background-color: #555;
-  }
-  
-  .menu-button {
-    position: relative;
-  }
-  
-  .dropdown-menu {
-    display: none;
-    position: absolute;
-    top: 100%;
-    right: 0;
-    background-color: #fff;
-    padding: 10px;
-    list-style: none;
-    margin: 0;
-    z-index: 1;
-    width: 150px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-  }
-  
-  
-  .dropdown-menu li {
-    margin-bottom: 5px;
-  }
-  
-  .dropdown-menu li a {
-    text-decoration: none;
-    color: #333;
-    display: block;
-    padding: 5px 10px;
-  }
-  
-  .menu-button:hover .dropdown-menu {
-    display: block;
-  }
-  
-  .info-box {
-    background-color: rgba(255, 255, 255, 0.8);
-    padding: 20px;
-    border-radius: 10px;
-    margin: 20px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  }
-  
-  .info-box h2 {
-    font-size: 24px;
-    margin-bottom: 10px;
-    color: #333;
-  }
-  
-  .info-box p {
-    font-size: 16px;
-    color: #555;
-  }
-  
-  .photo-box {
-    text-align: center;
-    padding: 20px;
-    width: 80vw;
-    height: 500px;
-    border: 2px solid #333;
-    background-image: url('/assets/mayor.png');
-    background-size: fixed;
-    background-position: center;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 20px;
-    margin-left: 9%;
-  }
-  
-  .photo-box img {
-    display: none;
-    position: fixed;
-  }
-  
-  
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-image: url("/assets/SanJuan.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.8;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+}
+
+.navbar {
+  background-color: #333;
+  color: #fff;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.navbar-content {
+  display: flex;
+  align-items: center;
+}
+
+.navbar-logo {
+  background-image: url("/assets/SanJuan1.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 80px;
+  height: 80px;
+  margin-right: 10px;
+}
+
+.logo-text {
+  color: #fff;
+}
+
+.navbar-list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+.navbar-list li {
+  margin-left: 10px;
+}
+
+.navbar-list li a {
+  color: #fff;
+  text-decoration: none;
+  padding: 5px 10px;
+}
+
+.navbar-list li a:hover {
+  background-color: #555;
+}
+
+.menu-button {
+  position: relative;
+}
+
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background-color: #fff;
+  padding: 10px;
+  list-style: none;
+  margin: 0;
+  z-index: 1;
+  width: 150px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.dropdown-menu li {
+  margin-bottom: 5px;
+}
+
+.dropdown-menu li a {
+  text-decoration: none;
+  color: #333;
+  display: block;
+  padding: 5px 10px;
+}
+
+.menu-button:hover .dropdown-menu {
+  display: block;
+}
+
+.info-box {
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 20px;
+  border-radius: 10px;
+  margin: 20px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.info-box h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+  color: #333;
+}
+
+.info-box p {
+  font-size: 16px;
+  color: #555;
+}
+
+.photo-box {
+  text-align: center;
+  padding: 20px;
+  width: 80vw;
+  height: 500px;
+  border: 2px solid #333;
+  background-image: url("/assets/mayor.png");
+  background-size: fixed;
+  background-position: center;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
+  margin-left: 9%;
+}
+
+.photo-box img {
+  display: none;
+  position: fixed;
+}
